fix the Heroku API connection
change port configuration, so that Heroku can get api inside the docker image

--- a/test_app_model.ipynb
+++ b/test_app_model.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-09T08:01:50.562439Z",
-     "start_time": "2021-03-09T08:01:49.663043Z"
+     "end_time": "2021-03-10T05:58:02.821325Z",
+     "start_time": "2021-03-10T05:58:02.813792Z"
     }
    },
    "outputs": [],
@@ -17,37 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-09T09:32:35.910454Z",
-     "start_time": "2021-03-09T09:32:35.885058Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# test api service deployed local\n",
-    "# local\n",
-    "#host = \"http://localhost:81\"\n",
-    "# in docker container\n",
-    "host = \"http://localhost:8000\"\n",
-    "# on external website\n",
-    "\n",
-    "\n",
-    "data_path = '../AbleTo_MLE_tech_assessment/'\n",
-    "data_file = 'train.csv'\n",
-    "raw_test=pd.read_csv(data_path + data_file)\n",
-    "\n",
-    "url = f\"{host}/predict\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-09T09:30:45.392879Z",
-     "start_time": "2021-03-09T09:30:45.388296Z"
+     "end_time": "2021-03-10T05:58:03.644505Z",
+     "start_time": "2021-03-10T05:58:03.638199Z"
     }
    },
    "outputs": [],
@@ -67,11 +41,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-09T09:32:39.127972Z",
-     "start_time": "2021-03-09T09:32:38.972415Z"
+     "end_time": "2021-03-10T05:57:58.793309Z",
+     "start_time": "2021-03-10T04:48:14.334Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# test api service deployed local\n",
+    "# local\n",
+    "#host = \"http://localhost:80\"\n",
+    "#host = \"http://localhost:5000\"\n",
+    "# in docker container\n",
+    "#host = \"http://localhost:8080\"\n",
+    "host = \"http://localhost:5000\"\n",
+    "# on external website\n",
+    "\n",
+    "\n",
+    "data_path = '../AbleTo_MLE_tech_assessment/'\n",
+    "data_file = 'train.csv'\n",
+    "raw_test=pd.read_csv(data_path + data_file)\n",
+    "\n",
+    "url = f\"{host}/predict\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T05:57:58.794277Z",
+     "start_time": "2021-03-10T04:48:15.192Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print('input data:')\n",
+    "print(raw_test[:1])\n",
+    "\n",
+    "r = test_model_api(url, raw_test[:1])\n",
+    "print('output result:')\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-09T08:38:33.368340Z",
+     "start_time": "2021-03-09T08:38:33.366175Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "#r = requests.post(f\"{host}/predict\", json=payload)\n",
+    "#r = requests.post('http://0.0.0.0:81/predict', json=payload)\n",
+    "\n",
+    "#print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T06:26:04.504115Z",
+     "start_time": "2021-03-10T06:26:04.418673Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# test api service deployed on the website \n",
+    "#host = \"external-website-address\"\n",
+    "host = \"https://assessment-botingw.herokuapp.com\"\n",
+    "\n",
+    "data_path = '../AbleTo_MLE_tech_assessment/'\n",
+    "data_file = 'train.csv'\n",
+    "raw_test=pd.read_csv(data_path + data_file)\n",
+    "\n",
+    "url = f\"{host}/predict\"\n",
+    "payload = raw_test[:100].to_json(orient=\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T06:35:43.635799Z",
+     "start_time": "2021-03-10T06:35:42.070597Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flask Dockerized and deployed to Heroku\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "r0 = requests.get(url = host)\n",
+    "print(r0.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T07:28:45.352725Z",
+     "start_time": "2021-03-10T07:28:17.490716Z"
     }
    },
    "outputs": [
@@ -106,21 +193,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 103,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-09T08:38:33.368340Z",
-     "start_time": "2021-03-09T08:38:33.366175Z"
+     "end_time": "2021-03-10T04:40:04.114438Z",
+     "start_time": "2021-03-10T04:40:04.105107Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__attrs__',\n",
+       " '__bool__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__enter__',\n",
+       " '__eq__',\n",
+       " '__exit__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__nonzero__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_content',\n",
+       " '_content_consumed',\n",
+       " '_next',\n",
+       " 'apparent_encoding',\n",
+       " 'close',\n",
+       " 'connection',\n",
+       " 'content',\n",
+       " 'cookies',\n",
+       " 'elapsed',\n",
+       " 'encoding',\n",
+       " 'headers',\n",
+       " 'history',\n",
+       " 'is_permanent_redirect',\n",
+       " 'is_redirect',\n",
+       " 'iter_content',\n",
+       " 'iter_lines',\n",
+       " 'json',\n",
+       " 'links',\n",
+       " 'next',\n",
+       " 'ok',\n",
+       " 'raise_for_status',\n",
+       " 'raw',\n",
+       " 'reason',\n",
+       " 'request',\n",
+       " 'status_code',\n",
+       " 'text',\n",
+       " 'url']"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "#r = requests.post(f\"{host}/predict\", json=payload)\n",
-    "#r = requests.post('http://0.0.0.0:81/predict', json=payload)\n",
-    "\n",
-    "#print(r.text)"
+    "dir(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T04:40:05.900753Z",
+     "start_time": "2021-03-10T04:40:05.896825Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Response.json of <Response [503]>>"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-10T04:40:07.073594Z",
+     "start_time": "2021-03-10T04:40:07.069244Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://assessment-botingw.herokuapp.com/predict'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url"
    ]
   },
   {
@@ -128,17 +331,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# test api service deployed on the website \n",
-    "host = \"external-website-address\"\n",
-    "\n",
-    "data_path = '../AbleTo_MLE_tech_assessment/'\n",
-    "data_file = 'train.csv'\n",
-    "raw_test=pd.read_csv(data_path + data_file)\n",
-    "\n",
-    "url = f\"{host}/predict\"\n",
-    "payload = raw_test[:100].to_json(orient=\"records\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
